<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.anekvurna.userapp.ProfileBasicActivity">

        <EditText
            android:id="@+id/profile_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/ic_account_box_black_24dp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_account_box_black_24dp"
            android:ems="10"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/profile_email"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_name" />

        <EditText
            android:id="@+id/profile_alternate_mobile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/ic_call_black_24dp"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/alternate_phone_hint"
            android:inputType="phone"
            android:maxLength="10"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_email" />

        <EditText
            android:id="@+id/profile_landline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/ic_office_telephone"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/landline_hint"
            android:inputType="number"
            android:maxLength="8"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_alternate_mobile" />


        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:onClick="onSaveBasic"
            android:text="Save and next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_landline" />

        <EditText
            android:id="@+id/profile_std_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/ic_office_telephone"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/std_code"
            android:inputType="number"
            android:maxLength="5"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/profile_landline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_alternate_mobile" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/personal_details"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include layout="@layout/loading_indicator"/>


    </android.support.constraint.ConstraintLayout>

</ScrollView>
